update is dirty

--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,11 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath "com.github.dcendents:android-maven-gradle-plugin:2.0"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:2.1"
         classpath 'io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,6 +24,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
